Fixed the z-index of the date over the post pic

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -136,6 +136,7 @@
     border-radius: 5px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
     background: rgba(50, 50, 50, 0.8);
+    z-index: 9;
     animation: 0.5s hoverover forwards, 0.5s fadein forwards;
 }
 
